# hush

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  time_test.sh
.github/workflows/: bump.yml  ci.yml  compression-report.yml  release.yml
benches/: stats.rs
packaging/homebrew/: README.md  hush.rb
src/: cli.rs  error.rs  lib.rs  main.rs  paths.rs  ui.rs
src/ast/: mod.rs  rust.rs
src/commands/: doctor.rs  expand.rs  gc.rs  hook.rs  install.rs  mod.rs  read.rs  stats.rs
src/exec/: mod.rs  pipeline.rs  runner.rs
src/filters/: cargo_build.rs  cargo_test.rs  common.rs  diff.rs  docker_build.rs  du_tree.rs  find.rs  git_diff.rs  git_log.rs  git_show.rs  git_status.rs  go_build.rs  grep.rs  json.rs  kubectl_logs.rs  ls.rs  make.rs  mod.rs  node_check.rs  passthrough.rs  pkg_install.rs  py_traceback.rs  read.rs  render.rs  tabular.rs  test_runner.rs
src/sandbox/: linux.rs  macos.rs  mod.rs  unsupported.rs
src/store/: id.rs  mod.rs
tests/: compression.rs
tests/fixtures/cargo-build/: cargo-own-error.stderr  diagnostics.stderr
tests/fixtures/cargo-test/: failure.stdout  pass.stdout  success.stderr  success.stdout
tests/fixtures/diff/: changes.stdout
tests/fixtures/docker-build/: build.stdout  buildkit.stdout
tests/fixtures/du-tree/: du-a.stdout  tree.stdout
tests/fixtures/find/: rs.stdout
tests/fixtures/git-diff/: changes.stdout
tests/fixtures/git-log/: recent.stdout
tests/fixtures/git-show/: commit.stdout
tests/fixtures/git-status/: dirty.stdout
tests/fixtures/go-build/: diagnostics.stderr
(+17 files in other folders)
